--- a/UnitTests/CMakeLists.txt
+++ b/UnitTests/CMakeLists.txt
@@ -40,7 +40,7 @@ add_subdirectory(Generator)
 add_subdirectory(Off)
 add_subdirectory(Schemas)
 add_subdirectory(Utilities)
-add_subdirectory(BIN)
+add_subdirectory(PointCloud)
 
 
 
