Revert "Adjust Doxygen-option in CMakeLists.txt"
This reverts commit 13658aed3df59584ec599934539de0b7a4b339d7.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -321,7 +321,7 @@ endforeach()
 #------------------------------------------------------------------------------
 # DOXYGEN. 
 #------------------------------------------------------------------------------
-Option(DOXYGEN_GENERATE_DOCUMENTATION "Build documentation for TUM OpenInfraPlatform." ON)
+Option(DOXYGEN_GENERATE_DOCUMENTATION "Build documentation for TUM OpenInfraPlatform." OFF)
 
 if(DOXYGEN_GENERATE_DOCUMENTATION)
 
