Revert "Revert "Merge remote-tracking branch 'tumcms/development' into IfcPolynomialCurve""
This reverts commit abde8e18300ad12055a146fdc4990c0622ba1313.

--- a/UnitTests/CMakeLists.txt
+++ b/UnitTests/CMakeLists.txt
@@ -40,6 +40,7 @@ add_subdirectory(Generator)
 add_subdirectory(Off)
 add_subdirectory(Schemas)
 add_subdirectory(Utilities)
+add_subdirectory(PointCloud)
 
 
 
