add OSM data support

--- a/Core/CMakeLists.txt
+++ b/Core/CMakeLists.txt
@@ -27,6 +27,7 @@ file(GLOB Core_DataManagement_Source 				src/DataManagement/*.*)
 file(GLOB Core_DataManagement_General_Source 		src/DataManagement/General/*.*)
 file(GLOB Core_IfcGeometryConverter_Source			src/IfcGeometryConverter/*.*)
 file(GLOB Core_OffConverter_Source					src/OffConverter/*.*)
+file(GLOB Core_OsmDataConverter_Source				src/OsmDataConverter/*.*)
 file(GLOB Core_Exception_Source						src/Exception/*.*)
 file(GLOB Core_SplineInterpretation_Source			src/SplineInterpretation/*.*)
 
@@ -35,6 +36,7 @@ source_group(Core\\DataManagement				FILES ${Core_DataManagement_Source})
 source_group(Core\\DataManagement\\General		FILES ${Core_DataManagement_General_Source})
 source_group(Core\\IfcGeometryConverter			FILES ${Core_IfcGeometryConverter_Source})
 source_group(Core\\OffConverter					FILES ${Core_OffConverter_Source})
+source_group(Core\\OsmDataConverter             FILES ${Core_OsmDataConverter_Source})
 source_group(Core\\Exception					FILES ${Core_Exception_Source})
 source_group(Core\\SplineInterpretation			FILES ${Core_SplineInterpretation_Source})
 
@@ -44,6 +46,7 @@ add_library(OpenInfraPlatform.Core STATIC
 	${Core_DataManagement_General_Source}
 	${Core_IfcGeometryConverter_Source}
 	${Core_OffConverter_Source}
+	${Core_OsmDataConverter_Source}
 	${Core_Exception_Source}
 	${Core_SplineInterpretation_Source}
 )
